Correct the float issues preventing the zoom rate meter from being visible

--- a/awestruct/css/styles.sass
+++ b/awestruct/css/styles.sass
@@ -68,6 +68,9 @@ $input-control-padding: 0.7rem
 	margin: 0 auto
 	padding: 0
 
+.no-margin-bottom
+	margin-bottom: 0
+
 ol, ul
 	margin-left: $medium-spacing
 
@@ -299,8 +302,7 @@ img.generated-png
 	border: $thin-border
 	height: 14px
 	padding: 1px
-	margin: 10px
-	display: none
+	margin: $small-spacing auto
 
 .zoom-rate-meter-inner
 	background-color: $foreground-color
